Move all the tag functionality into the core plugin, split classes into interface and implementation for API module, implement PlayerTagIndex in order to make tag queries o(1) instead of o(n)